--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
     "framer-motion": "^12.23.6",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -32,6 +33,7 @@
     "react-leaflet": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
+    "react-type-animation": "^3.2.0",
     "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.11"
   },
