--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-leaflet": "^5.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^7.6.3",
+    "react-slick": "^0.31.0",
     "react-type-animation": "^3.2.0",
     "sweetalert2": "^11.22.2",
+    "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
